Login ve register’lar UI ‘a taşındı, giriş yapmayan kullanıcının. görebileceği yerler ayarlandı

--- a/HotelProjectUILayer/HotelProjectUILayer.csproj
+++ b/HotelProjectUILayer/HotelProjectUILayer.csproj
@@ -78,6 +78,7 @@
     <None Remove="Views\Shared\Components\_Staff\" />
     <None Remove="Views\Shared\Components\_Testimonial\" />
     <None Remove="Areas\Admin\Views\ImageFile\" />
+    <None Remove="Views\ErrorPages\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dtos\" />
@@ -127,5 +128,6 @@
     <Folder Include="Views\Shared\Components\_Staff\" />
     <Folder Include="Views\Shared\Components\_Testimonial\" />
     <Folder Include="Areas\Admin\Views\ImageFile\" />
+    <Folder Include="Views\ErrorPages\" />
   </ItemGroup>
 </Project>
